rust-core/build_check_final.txt
cargo :     Checking superbook-pdf v0.1.0 (C:\Users\sfuru\Documents\Rust_DN_Sup
erBook_PDF_Converter\rust-core)
発生場所 行:1 文字:132
+ ... .cargo\bin;C:\msys64\mingw64\bin;$env:PATH"; cargo check 2>&1 | Out-F ...
+                                                  ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking su...rter\rust-core) 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0425]: cannot find value `temp_output_dir` in this scope
   --> src\yomitoku.rs:337:18
    |
337 |                 &temp_output_dir,
    |                  ^^^^^^^^^^^^^^^
    |
help: a local variable with a similar name exists
    |
337 -                 &temp_output_dir,
337 +                 &output_dir,
    |

error[E0425]: cannot find value `args` in this scope
   --> src\yomitoku.rs:338:18
    |
338 |                 &args,
    |                  ^^^^ not found in this scope
    |
help: consider importing this function
    |
 28 + use std::env::args;
    |

warning: unused import: `crate::ai_bridge::AiBridge`
  --> src\markdown_pipeline.rs:18:5
   |
18 | use crate::ai_bridge::AiBridge;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::ai_bridge::AiBridge`
  --> src\realesrgan.rs:32:5
   |
32 | use crate::ai_bridge::AiBridge;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: future cannot be sent between threads safely
   --> src\ai_bridge.rs:810:5
    |
810 |     async fn execute(
    |     ^^^^^ future created by async block is not `Send`
    |
    = help: the trait `Sync` is not implemented for `dyn Any`
note: captured value is not `Send` because `&` references cannot be sent unless
 their referent is `Sync`
   --> src\ai_bridge.rs:849:45
    |
849 |                         if let Some(opts) = tool_options.downcast_ref::<c
rate::RealEsrganOptions>() {
    |                                             ^^^^^^^^^^^^ has type `&dyn A
ny` which is not `Send`, because `dyn Any` is not `Sync`
    = note: required for the cast from `Pin<Box<{async block@src\ai_bridge.rs:8
10:5: 810:10}>>` to `Pin<Box<dyn Future<Output = std::result::Result<AiTaskResu
lt, AiBridgeError>> + Send>>`

For more information about this error, try `rustc --explain E0425`.
warning: `superbook-pdf` (lib) generated 2 warnings
error: could not compile `superbook-pdf` (lib) due to 3 previous errors; 2 warn
ings emitted
